Fix RCPTT run (RCPTT should fail now!)